--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,9 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.3 Crimson;
+
   color: #222;
+  font-family: "Crimson Text", serif;
 }
 
 *, *::before, *::after {
@@ -34,6 +35,11 @@ article header {
   border-bottom: 1px solid #999;
 }
 
+article p {
+  margin-top: 1.25em;
+  margin-right: .7em;
+}
+
 article header p {
   font-style: italic;
 }
@@ -48,40 +54,93 @@ blockquote {
   font-size: 1.125rem;
 }
 
+article ol {
+  margin-left: -1.75em;
+}
+
 .quote {
   color: #999;
+}
+
+@media only screen and (min-width: 20em) {
+
+  html {
+    line-height: 1.3;
+  }
+
+  header {
+    line-height: .25;
+    padding-bottom: .5em;
+  }
+
+  article > p:last-child {
+    padding-bottom: 1em;
+  }
+
+  article {
+    padding: .75em;
+    padding-top: .6em;
+  }
+
+  blockquote {
+    margin-left: 0;
+    margin-right: -2em;
+  }
+
+  article ol {
+    padding-top: .25em;
+    padding-bottom: .25em;
+  }
 }
 
 @media only screen and (min-width: 38em) {
 
   html {
-    font-size: 110%;
     line-height: 1.4;
+    font-size: 110%;
   }
 
-  h1,
-  p {
-    margin: 0 0 1.4rem;
+  article {
+    padding-top: .5em;
   }
 
+  header > p {
+    margin-bottom: 1.5em;
+  }
+
+  blockquote {
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (min-width: 60em) {
 
   html {
-    font-size: 120%;
     line-height: 1.5;
+    font-size: 120%;
+    margin-bottom: 1.5em;
   }
 
-  h1,
-  p {
-    margin: 0 0 1.5rem;
+  article {
+    margin-left: 4em;
   }
 
-  @media only screen and (min-width: 90em) {
+  blockquote {
+    margin: 0 auto;
+  }
+
+  article ol {
+    padding-top: 1em;
+  }
+}
+
+@media only screen and (min-width: 90em) {
 
   html {
     font-size: 130%;
   }
 
+  article {
+    margin-left: 15em;
+  }
 }
