--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,10 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-
-  color: #222;
   font-family: "Crimson Text", serif;
+  font-size: 100%;
+  line-height: 1.3;
+  color: #222;
 }
 
 *, *::before, *::after {
@@ -25,23 +26,37 @@ body {
 
 article {
   max-width: 43em;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 article h1 {
   font-weight: normal;
+  margin: 1.3rem 0 0;
 }
 
 article header {
   border-bottom: 1px solid #999;
-}
-
-article p {
-  margin-top: 1.25em;
-  margin-right: .7em;
+  margin: 0 0 1.3rem;
 }
 
 article header p {
   font-style: italic;
+  margin: 0 0 1.3rem;
+}
+
+header + p {
+  margin-bottom: 1.3rem;
+}
+
+article p {
+  margin-bottom: 1.3rem;
+}
+
+article ol {
+  margin-bottom: 1.3rem;
 }
 
 article > p:last-child {
@@ -52,84 +67,69 @@ blockquote {
   max-width: 24em;
   color: #555;
   font-size: 1.125rem;
-}
-
-article ol {
-  margin-left: -1.75em;
+  margin: 1.3rem 0;
 }
 
 .quote {
   color: #999;
+  hanging-punctuation: first;
 }
-
-@media only screen and (min-width: 20em) {
-
-  html {
-    line-height: 1.3;
-  }
-
-  header {
-    line-height: .25;
-    padding-bottom: .5em;
-  }
-
-  article > p:last-child {
-    padding-bottom: 1em;
-  }
-
-  article {
-    padding: .75em;
-    padding-top: .6em;
-  }
-
-  blockquote {
-    margin-left: 0;
-    margin-right: -2em;
-  }
-
-  article ol {
-    padding-top: .25em;
-    padding-bottom: .25em;
-}
-
 
 @media only screen and (min-width: 38em) {
 
   html {
-    line-height: 1.4;
     font-size: 110%;
+    line-height: 1.4;
   }
 
-  article {
-    padding-top: .5em;
+  article h1 {
+    margin-top: 1.4rem;
   }
 
-  header > p {
-    margin-bottom: 1.5em;
+  article header,
+  article header p,
+  header + p {
+    margin-bottom: 1.4rem;
   }
 
   blockquote {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.4rem;
+    margin-bottom: 1.4rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
 
   html {
-    line-height: 1.5;
     font-size: 120%;
-    margin-bottom: 1.5em;
+    line-height: 1.5;
   }
 
   article {
-    margin-left: 4em;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  article h1 {
+    margin-top: 1.5rem;
+  }
+
+  article header,
+  article header p,
+  header + p {
+    margin-bottom: 1.5rem;
   }
 
   blockquote {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
-  article ol {
-    padding-top: 1em;
 }
 
 @media only screen and (min-width: 90em) {
@@ -138,6 +138,4 @@ article ol {
     font-size: 130%;
   }
 
-  article {
-    margin-left: 15em;
-  }
+}
